Fixed more styling problems - home login input fileds are cut off in ipad 1024px Pleas enter the commit message for your changes. Lines starting

--- a/static/css/base/base.css
+++ b/static/css/base/base.css
@@ -152,7 +152,7 @@ px      68    160    252    344    436    528    620    712    804    896    */
 
 body {
     text-align: center;
-    position: relative;
+    overflow-x: hidden; 
     border-top: 30px solid #3c3c3c;
 	color: #555;
 	-webkit-text-size-adjust: 100%; /* Stops Mobile Safari from auto-adjusting font-sizes */
@@ -323,9 +323,9 @@ cols    1     2      3      4      5      6      7      8
 px      68    160    252    344    436    528    620    712    */
 
 @media only screen and (min-width: 768px) and (max-width: 991px) {
+   
     body {
-        background-position: left 32px;   
-  	
+        background-position: left 32px;
     }
 	
 	#masthead {
@@ -380,9 +380,9 @@ cols    1     2      3
 px      68    160    252    */
 
 @media only screen and (max-width: 767px) {
+
     body {
         background-position: left 132px; 
-        
     }
     
     #login-status {
@@ -453,8 +453,7 @@ px      68    160    252    344    436    */
 @media only screen and (min-width: 480px) and (max-width: 767px) {
     
     body {
-        background-position: left 132px;  
-       
+        background-position: left 132px; 
     }
     
     #login-status {
