--- a/static/css/home.css
+++ b/static/css/home.css
@@ -143,7 +143,7 @@ a.action-view-map  .btn-intro {
 }
 
 .login-box .form-row input {
-    width: 198px;
+    width: 188px;
 }
 
 /* Logged in - login-box */
